@startuml

!include Skin.iuml

hide members

class StateModel
class State
class CompositeState
class InitialState
class TerminalState
abstract StateMachine
class Actor
class "State Model Registry" as StateModelRegistry<<Singleton>>

StateModelRegistry "1"--->"*" StateModel
StateMachine "*"--->"1" StateModel

InitialState -u-|> State
TerminalState -u-|> State
CompositeState -u-|> State

StateModel "1"-->"*" State

StateMachine -u-|> Actor


@enduml